--- a/src/components/CategoryCard/CategoryCard.css
+++ b/src/components/CategoryCard/CategoryCard.css
@@ -5,15 +5,19 @@
     border-radius: .4rem;
     padding: 2rem;
     background: var(--color-background);
-    margin: 3rem;
     width: 20rem;
     height: 20rem;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 6px;
     cursor: pointer;
 }
 
+.categoryCard__wrapper:hover {
+    background: var(--color-background-hover);
+}
+
 .categoryCard__header {
     font-family: var(--font-family-primary);
+    text-align: center;
 }
 
 .categoryCard__desc {
