--- a/src/components/RecipeCard/RecipeCard.css
+++ b/src/components/RecipeCard/RecipeCard.css
@@ -6,7 +6,6 @@
     border-radius: .4rem;
     padding: 2rem;
     background: var(--color-background);
-    margin: 3rem;
     width: 20rem;
     height: 20rem;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 6px;
@@ -15,6 +14,7 @@
 
 .recipeCard__header {
     font-family: var(--font-family-primary);
+    text-align: center;
 }
 
 .recipeCard__imgWrapper {
